# MartinAssist

./: .gitignore  ASCIIFile.cpp  ASCIIFile.h  AllFilesInFolder.cpp  AllFilesInFolder.h  CMakeLists.txt  CMakeLists.txt~  CppParser.cpp  CppParser.h  CppParserTest.cpp  CppParserTest.h  EFileList.cpp  EFileList.h  ERedundancy.cpp  ERedundancy.h  EveryHere.cpp  EveryHere.h  FileIODialog.cpp  FileIODialog.h  FileSystem.cpp  FileSystem.h  GranularSynth.cpp  GranularSynth.h  GranularSynthUI.cpp  GranularSynthUI.h  Gui.cpp  Gui.h  GuiDrives.cpp  GuiFiles.cpp  LICENSE  LiterateProcessor.cpp  LiterateProcessor.h  MartinAssist  MartinAssist.aps  MartinAssist.cpp  MartinAssist.rc  MartinAssist.sln  MartinAssist.vcxproj  MartinAssist.vcxproj.filters  Parse.cpp  (+19 more)
Everything/: source.txt
ImGui/GLFW/: glfw3.h
